[package]
name = "easy_complex"
version = "0.3.3"
authors = ["spcan <agrc14@gmail.com>"]
description = "Easy to use complex number arithmetics"
license = "Apache-2.0"
keywords = ["complex", "numbers", "math"]
readme = "README.md"
repository = "https://github.com/spcan/easy-complex"

[dependencies]

[profile.dev]
opt-level = 2
debug = true
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
