[package]
name = "easy_complex"
version = "0.4.1"
authors = ["spcan <agrc14@gmail.com>"]
description = "Complex numbers crate"
license = "MIT"
keywords = ["complex", "numbers", "math", "mathematics"]
readme = "README.md"
repository = "https://github.com/spcan/easy-complex"


[dependencies]

[features]

[profile.dev]
opt-level = 2
debug = true
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'

[profile.test]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'


[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
